[package]
name = "rustlike"
version = "0.12.0"
authors = ["Aaron Wojton <awojton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcod = {version = "0.15", features = ["serialization"]}
rand = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
